--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -138,49 +138,89 @@ jobs:
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/micro.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \
+            --name "Micro Benchmark" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \
+            --new build/release/benchmark/benchmark_runner \
+            --benchmarks .github/regression/micro.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test Ingestion Perf
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/ingestion.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \ 
+            --name "Ingestion Performance" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \ 
+            --benchmarks .github/regression/ingestion.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test TPCH
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/tpch.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \ 
+            --name "TPC-H" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \ 
+            --benchmarks .github/regression/tpch.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test TPCH-PARQUET
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/tpch_parquet.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \ 
+            --name "TPC-H (Parquet)" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \  
+            --benchmarks .github/regression/tpch_parquet.csv \  
+            --verbose --threads 2
 
       - name: Regression Test TPCDS
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/tpcds.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \
+            --name "TPC-DS" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \
+            --new build/release/benchmark/benchmark_runner \  
+            --benchmarks .github/regression/tpcds.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test H2OAI
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/h2oai.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \
+            --name "H2OAI" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \
+            --benchmarks .github/regression/h2oai.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test IMDB
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/imdb.csv --verbose --threads 2
+          python scripts/regression/test_runner.py 
+            --name "IMDB" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner 
+            --new build/release/benchmark/benchmark_runner 
+            --benchmarks .github/regression/imdb.csv 
+            --verbose --threads 2
 
       - name: Regression Test CSV
         if: always()
         shell: bash
         run: |
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/csv.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \ 
+            --name "CSV" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \  
+            --benchmarks .github/regression/csv.csv \ 
+            --verbose --threads 2
 
       - name: Regression Test RealNest 
         if: always()
@@ -191,7 +231,12 @@ jobs:
           mkdir -p duckdb/duckdb_benchmark_data
           wget -q https://duckdb-blobs.s3.amazonaws.com/data/realnest/realnest.duckdb --output-document=duckdb_benchmark_data/real_nest.duckdb
           cp duckdb_benchmark_data/real_nest.duckdb duckdb/duckdb_benchmark_data/real_nest.duckdb
-          python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/realnest.csv --verbose --threads 2
+          python scripts/regression/test_runner.py \ 
+            --name "RealNest" --gh-summary \
+            --old duckdb/build/release/benchmark/benchmark_runner \ 
+            --new build/release/benchmark/benchmark_runner \  
+            --benchmarks .github/regression/realnest.csv \  
+            --verbose --threads 2
 
   regression-test-storage:
     name: Storage Size Regression Test
