--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -139,7 +139,7 @@ jobs:
         shell: bash
         run: |
           python scripts/regression/test_runner.py \
-            --name "Micro Benchmark" --gh-summary enable\
+            --name "Micro Benchmark" --gh-summary enable-with-heading \
             --old duckdb/build/release/benchmark/benchmark_runner \
             --new build/release/benchmark/benchmark_runner \
             --benchmarks .github/regression/micro.csv \
@@ -216,7 +216,7 @@ jobs:
         shell: bash
         run: |
           python scripts/regression/test_runner.py \
-            --name "CSV" --gh-summary enable-with-heading \
+            --name "CSV" --gh-summary enable \
             --old duckdb/build/release/benchmark/benchmark_runner \
             --new build/release/benchmark/benchmark_runner \
             --benchmarks .github/regression/csv.csv \
